# cowork-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bootstrap.sh  install.sh
.github/workflows/: release.yml
docs/changelog/: cowork-v0.1.4-beta.md
meta/docker/: Dockerfile  TASK_V1.md  run-coldstart-hello.sh  run-coldstart-local.sh  run-opencode-task-v1.sh  run-task-v1.sh
meta/docker/auth/: auth.helloworld.json  auth.local.example.json
meta/subagent/: acceptance.md  evaluation.md  questions.md  validation.md
meta/subagent/questions/: q001-resource-boundary.md  q002-auth-copy-path.md  q003-coldstart-feedback.md
src/: config.rs
src/commands/: clone.rs
tests/: cli_smoke.rs
